Activate skin test
Change campaign configuration to start skin test on August 27th 2019

--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -36,11 +36,12 @@ donation_address:
 skins:
   description: Test different skins
   reference: "https://phabricator.wikimedia.org/T206994"
-  start: "2018-10-31 13:00:00"
-  end: "2019-01-16 23:59:59"
+  start: "2019-08-17 10:00:00"
+  end: "2019-09-17 23:59:59"
   buckets:
     - "cat17"
     - "10h16"
+    - "laika"
   default_bucket: "cat17"
   url_key: skin
   active: true
