--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -36,15 +36,15 @@ donation_address:
 skins:
   description: Test different skins
   reference: "https://phabricator.wikimedia.org/T206994"
-  start: "2019-08-27 10:00:00"
-  end: "2019-09-17 23:59:59"
+  start: "2019-08-28 10:00:00"
+  end: "2019-09-28 23:59:59"
   buckets:
     - "cat17"
     - "10h16"
     - "laika"
   default_bucket: "cat17"
   url_key: skin
-  active: false
+  active: true
 
 membership_call_to_action:
   description: Display different content for membership call to action on donation confirmation page
