--- a/deployment/tasks/build.yml
+++ b/deployment/tasks/build.yml
@@ -42,4 +42,4 @@
       DOCKER_FLAGS: ""
 
 - name: Create tarball
-  shell: tar -czf {{ build_dir }}.tar.gz --exclude=".git" --exclude=node_modules -C {{ build_dir }} . warn=no
+  shell: tar -czf {{ build_dir }}.tar.gz --exclude=".git" --exclude=node_modules --exclude=var -C {{ build_dir }} . warn=no
