Add campaign configuration for address data test

--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -17,3 +17,7 @@ membership_call_to_action:
 amount_options:
   active: true
   start: "2018-12-01"
+
+anon_form_display:
+  active: true
+  start: "2019-10-01"
