Make form more compact on AB test

--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -21,3 +21,7 @@ amount_options:
 anon_form_display:
   active: true
   start: "2019-10-01"
+
+compact_design:
+  active: true
+  start: "2019-10-06 10:00:00"
