Update Scrutinizer PHP version

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -25,6 +25,9 @@ filter:
         - 'vendor/'
 
 build:
+    environment:
+        php:
+            version: '7.3'
     nodes:
         analysis:
             tests:
