--- a/app/config/archived_campaigns.yaml
+++ b/app/config/archived_campaigns.yaml
@@ -24,3 +24,15 @@ usability:
     - improved
   default_bucket: old
   url_key: us
+
+donation_address:
+  description: Test address form being required immediately against only being presented optionally on the confirmation page
+  reference: "https://phabricator.wikimedia.org/T211666"
+  start: "2018-12-12 12:00:00"
+  end: "2019-01-07 23:00:00"
+  active: true
+  buckets:
+    - required
+    - optional
+  default_bucket: required
+  url_key: da
