--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -64,13 +64,16 @@ amount_options:
   active: true
 
 anon_form_display:
-  description: Test form variations of selecting anonymous donation - with selecting "address type" or 2 groups of radio buttons, first for selecting anonymous yes/no, then address type person/company
-  reference: "https://phabricator.wikimedia.org/T234187"
-  start: "2019-10-10 15:00:00"
+  description: >
+    Test form variations of selecting anonymous donation - with selecting "address type" (a radio group with three choices)
+    or 2 groups of radio buttons, first for selecting anonymous yes/no, then address type person/company.
+  reference: "https://phabricator.wikimedia.org/T237939"
+  start: "2019-11-19 11:00:00"
   end: "2019-12-31 23:00:00"
   buckets:
      - "address_type"
      - "two_steps"
+     - "two_steps_fixed_disclaimer"
   default_bucket: "two_steps"
   url_key: fd
   active: true
@@ -87,3 +90,4 @@ compact_design:
   default_bucket: "classic"
   url_key: compact
   active: true
+  param_only: true
