Improve logging configuration
Remove backwards-compatibility (changes are successfully deployed, old
format no longer needed).
Adapt default config.

Fix configuration JSON schema.

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -187,7 +187,11 @@
 		"configurations": [ "campaigns.yml" ]
 	},
 	"logging": {
-		"method": "error_log",
-		"level": "DEBUG"
+		"handlers": [
+			{
+				"method": "error_log",
+				"level": "DEBUG"
+			}
+		]
 	}
 }
