--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -37,12 +37,11 @@ skins:
   description: Test different skins
   reference: "https://phabricator.wikimedia.org/T206994"
   start: "2019-08-28 10:00:00"
-  end: "2019-10-28 23:59:59"
+  end: "2026-01-01 00:00:00" # Give Fundraising ops 5 years time to look at old skins
   buckets:
     - "cat17"
     - "10h16"
-    - "laika"
-  default_bucket: "cat17"
+  default_bucket: "10h16"
   url_key: skin
   active: true
 
