Move skin selection to configuration
Move skin selection from bucket campaigns to app configuration (with
laika as the default for all environemnts execept test).

Fixed skin-dependent unit tests:
Change the unit tests that depend on the "Laika" skin being set
through the bucket testing campaign configuration. Most tests now set
the skin through the configuration when creating the environment.

CampaignCookieTest now uses a custom test campaign for all its tests.

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -11,6 +11,7 @@
 			"1002": "SET NAMES utf8"
 		}
 	},
+	"skin": "laika",
 	"enable-dev-entry-point": false,
 	"banned-ibans": [],
 	"web-basepath": "",
