Adapt AddressChange route tests
Require new versions of bounded contexts where the AddressChange is
inverted.
Temporarily require the dev version of FundraisingStore

Create real AddressChange instances in the route tests instead of creating them through cascades when creating donations.

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 		"wmde/fundraising-subscriptions": "@dev",
 		"wmde/fundraising-content-provider": "^2.0",
 		"wmde/fundraising-address-change": "@dev",
+		"wmde/fundraising-store": "@dev",
 
 		"symfony/twig-bridge": "^3.3",
 		"symfony/translation": "^3.3",
