--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,8 +10,7 @@
          stopOnFailure="false"
          stopOnIncomplete="false"
          stopOnSkipped="false"
-         verbose="false"
-         printerClass="NyanCat\PHPUnit\ResultPrinter">
+         verbose="false">
     <testsuites>
         <testsuite name="unit">
             <directory>tests/Unit</directory>
