Temporarily use composer and PHP of Travis
When using our own container for running "composer install", it's
missing a GitHub access token and fails. Trying to get around that by
using Travis' own composer which should have a token. This reintroduces
the problem of PHP versions getting out of sync between Travis and our
containers. In the long run, our container should have its own GitHub
access token, stored as a Travis secret. When that is done, revert this
commit.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
-language: bash
+language: php
+
+php:
+    - 7.4
+
 services:
   - docker
 
 install:
-  - travis_retry make install-php
+  - travis_retry composer install # This is a crutch to use travis tokens for github API instead of needing our own
+  # Commented out for efficiency reasons
+  # - travis_retry make install-php
   - make install-js
 
 before_script:
