--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -12,3 +12,7 @@ amount_options:
 compact_design:
   active: true
   start: "2019-10-06 10:00:00"
+
+address_type:
+  active: true
+  start: "2020-03-26"
