--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -61,3 +61,14 @@ compact_design:
   url_key: compact
   active: true
   param_only: true
+
+address_type:
+  description:
+  reference: "https://phabricator.wikimedia.org/T247228"
+  start: "2020-04-01"
+  end: "2020-07-15"
+  buckets:
+    - "preselection"
+    - "no_preselection"
+  url_key: addrpre
+  active: true
