--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "@dev",
+		"wmde/fundraising-donations": "dev-remove-fundraising-store",
 		"wmde/fundraising-memberships": "@dev",
 		"wmde/fundraising-payments": "@dev",
 		"wmde/fundraising-subscriptions": "@dev",
