Actiavte address preselection A/B test

--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -65,12 +65,12 @@ compact_design:
 address_type:
   description: Test if the address type not being preselected changes the user behaviour of entering nonsense address data.
   reference: "https://phabricator.wikimedia.org/T247228"
-  start: "2020-04-01"
+  start: "2020-04-07"
   end: "2020-07-15"
   buckets:
     - "preselection"
     - "no_preselection"
   default_bucket: "preselection"
   url_key: addrpre
-  active: false
+  active: true
   param_only: false
