--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		"wmde/fundraising-donations": "dev-remove-fundraising-store",
 		"wmde/fundraising-memberships": "dev-remove-fundraising-store",
 		"wmde/fundraising-payments": "@dev",
-		"wmde/fundraising-subscriptions": "@dev",
+		"wmde/fundraising-subscriptions": "dev-remove-fundraising-store",
 		"wmde/fundraising-content-provider": "^2.0",
 		"wmde/fundraising-address-change": "@dev",
 		"wmde/fundraising-store": "@dev",
