Remove FAQ autocollapse

--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "dev-remove-fundraising-store",
-		"wmde/fundraising-memberships": "dev-remove-fundraising-store",
-		"wmde/fundraising-payments": "@dev",
-		"wmde/fundraising-subscriptions": "dev-remove-fundraising-store",
+		"wmde/fundraising-donations": "~1.0",
+		"wmde/fundraising-memberships": "~1.0",
+		"wmde/fundraising-payments": "~1.0",
+		"wmde/fundraising-subscriptions": "~1.0",
 		"wmde/fundraising-content-provider": "^2.0",
 		"wmde/fundraising-address-change": "@dev",
 
