Add crypto key for user data
Add master key to configuration
Add UserDataKeyGenerator class
Pass generated daily key to donation form

This is for https://phabricator.wikimedia.org/T249803

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -183,6 +183,7 @@
 		"raw": false,
 		"sameSite": null
 	},
+	"user-data-key": "",
 	"campaigns": {
 		"timezone":  "Europe/Berlin",
 		"configurations": [ "campaigns.yml" ]
