--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
 		"ext-intl": "*",
 		"ext-curl": "*",
 		"ext-json": "*",
+		"ext-sodium": "*",
 
 		"silex/silex": "~2.0",
 		"twig/twig": "~1.23",
