--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~1.0",
-		"wmde/fundraising-memberships": "~1.0",
+		"wmde/fundraising-donations": "dev-domain-events",
+		"wmde/fundraising-memberships": "dev-domain-events",
 		"wmde/fundraising-payments": "~1.0",
 		"wmde/fundraising-subscriptions": "~1.0",
 		"wmde/fundraising-content-provider": "^2.0",
