Keep configurations in Ansible Vault
The application configurations are now part of the deployment scripts.
The configurations are encrypted with the same vault key as the group
variables.

Removed `config_dir` setting from group_vars, the playbook determines
the configuration by domain name.

--- a/deployment/deployment.yml
+++ b/deployment/deployment.yml
@@ -28,10 +28,11 @@
       include_tasks: tasks/overwrite_deploy.yml
       when: not is_atomic_deploy
 
-    - name: Set release_directory for atomic deploys
+    - name: Set variables for atomic deploys
       set_fact:
         release_directory: "{{ deploy_base }}/{{ domain }}/{{ release_name }}"
         app_dir: "{{ deploy_base }}/{{ domain }}"
+        config_file: "files/configs/{{ domain }}/config.{{ environment_name }}.json"
       when: is_atomic_deploy
 
     - include_tasks: tasks/deploy_to_server.yml
