Add second symlink for maintenance mode

--- a/deployment/tasks/deploy_to_server.yml
+++ b/deployment/tasks/deploy_to_server.yml
@@ -103,9 +103,16 @@
       environment:
         APP_ENV: "{{ environment_name }}"
 
-    - name: Symlink the document root of release
+    - name: Symlink the document root of release to current-release
       file:
         src: "{{ release_directory }}/web"
+        dest: "{{ deploy_base }}/{{ domain }}/current-release"
+        state: link
+      when: skip_symlink is undefined and is_atomic_deploy
+
+    - name: Symlink the current-release folder to htdocs
+      file:
+        src: "{{ deploy_base }}/{{ domain }}/current-release"
         dest: "{{ deploy_base }}/{{ domain }}/{{ document_root }}"
         state: link
       when: skip_symlink is undefined
