Update swiftmail creation

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -195,5 +195,12 @@
 				"level": "DEBUG"
 			}
 		]
+	},
+	"smtp": {
+		"host": "localhost",
+		"username": "",
+		"password": "",
+		"port": 25,
+		"encryption": ""
 	}
 }
