Set build branch back to master

--- a/deployment/inventory/test.ini
+++ b/deployment/inventory/test.ini
@@ -8,8 +8,7 @@ webserver
 127.0.0.1 ansible_connection=local
 
 [local:vars]
-# TODO change back to master when this branch is merged
-build_branch = manitu-deploy
+build_branch = master
 
 
 # vi: ft=dosini
