Duplicate Address + AddressType for AB test
- create new campaign for a/b test
- add 'email' addresstype to the address type model
- implements the feature toggle switch for the a/b test

https://phabricator.wikimedia.org/T260023

--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -16,3 +16,7 @@ compact_design:
 address_type:
   active: true
   start: "2020-09-15"
+
+address_provision_options:
+  active: true
+  start: "2020-09-20"
