--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -74,3 +74,16 @@ address_type:
   url_key: addrpre
   active: true
   param_only: false
+
+address_provision_options:
+  description: Test adding provisional address type options before choosing a donor type. (Adds "e-mail only" option)
+  reference: "https://phabricator.wikimedia.org/T260023"
+  start: "2020-10-01"
+  end: "2020-12-31"
+  buckets:
+    - "provisional_address_options"
+    - "old_address_type_options"
+  default_bucket: "provisional_address_options"
+  url_key: provadd
+  active: true
+  param_only: false
