Introduce composition API for Address component
Refactors the code in Address to use the composition API
that got introduced with Vue 3 and extracts code to make it reusable.

--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -86,4 +86,4 @@ address_provision_options:
   default_bucket: "provisional_address_options"
   url_key: provadd
   active: true
-  param_only: false
+  param_only: true
