--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
 		"ext-json": "*",
 		"ext-sodium": "*",
 
-		"silex/silex": "~2.0",
-		"twig/twig": "~1.23",
+		"twig/twig": "^3.0",
 		"pimple/pimple": "~3.0",
 
 		"wmde/email-address": "~1.0",
@@ -26,28 +25,30 @@
 		"wmde/freezable-value-object": "~1.0",
 		"wmde/fun-validators": "~3.0.0",
 
-		"symfony/twig-bridge": "^3.3",
-		"symfony/console": "^3.3",
-		"symfony/stopwatch": "^3.3",
-		"symfony/http-foundation": "^3.3",
+		"symfony/twig-bridge": "^5.1",
+		"symfony/console": "^5.1",
+		"symfony/stopwatch": "^5.1",
+		"symfony/http-foundation": "^5.1",
+		"symfony/framework-bundle": "^5.1",
+		"symfony/validator": "^5.1",
+		"symfony/property-access": "^5.1",
+		"symfony/config": "^5.1",
+		"symfony/filesystem": "^5.1",
+		"symfony/yaml": "^5.1",
+		"symfony/dotenv": "^5.1",
+		"symfony/debug": "^5.1",
+		"doctrine/migrations": "~3.0",
 
 		"airbrake/phpbrake": "~0.7",
 		"jeroen/file-fetcher": "~6.0",
 		"psr/log": "~1.0",
 		"monolog/monolog": "~2.1",
 		"swiftmailer/swiftmailer": "~6.2",
-		"twig/extensions": "^1.3",
 		"micropayment-de/service-client": "~1.23",
 		"justinrainbow/json-schema": "^5.2",
 		"piwik/piwik-php-tracker": "^2.0",
 		"guzzlehttp/guzzle": "^6.0",
-		"symfony/validator": "^4.0",
-		"symfony/property-access": "^5.1",
-		"symfony/config": "^4.1",
-		"symfony/filesystem": "^5.1",
-		"symfony/yaml": "^4.1",
 		"remotelyliving/doorkeeper": "^1.4",
-		"doctrine/migrations": "~1.8",
 		"nikic/php-parser": "~4.0",
 		"vlucas/phpdotenv": "~5.2.0"
 	},
@@ -121,23 +122,20 @@
 	],
 	"require-dev": {
 		"ext-pdo_sqlite": "*",
-
 		"phpunit/phpunit": "~9.4.0",
 		"codeception/specify": "~1.1",
 		"ockcyp/covers-validator": "~1.0",
-		"mikey179/vfsstream": "~1.6",
-		"wmde/psr-log-test-doubles": "~2.1",
-
-		"wmde/fundraising-phpcs": "~1.0",
 		"phpmd/phpmd": "~2.6",
-
-		"symfony/browser-kit": "^4.4",
-		"silex/web-profiler": "~2.0",
-		"sorien/silex-dbal-profiler": "~2.0",
-		"wmde/fundraising-frontend-content": "dev-test",
-		"symfony/css-selector": "^5.1",
 		"phpstan/phpstan": "^0.12",
-		"matthiasnoback/symfony-config-test": "^4.0"
+		"matthiasnoback/symfony-config-test": "^4.0",
+		"mikey179/vfsstream": "~1.6",
+
+		"wmde/psr-log-test-doubles": "~2.1",
+		"wmde/fundraising-phpcs": "~1.0",
+		"wmde/fundraising-frontend-content": "dev-test",
+
+		"symfony/css-selector": "^5.1",
+		"symfony/browser-kit": "^5.1"
 	},
 	"autoload": {
 		"psr-4": {
