--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~4.0.0",
+		"wmde/fundraising-donations": "~4.0.5",
 		"wmde/fundraising-memberships": "~3.0.0",
 		"wmde/fundraising-payments": "~1.0.1",
 		"wmde/fundraising-subscriptions": "~2.0.0",
 		"wmde/fundraising-content-provider": "~3.0",
-		"wmde/fundraising-address-change": "@dev",
-		"wmde/freezable-value-object": "~1.0",
+		"wmde/fundraising-address-change": "1.0.2",
+		"wmde/freezable-value-object": "~2.0",
 		"wmde/fun-validators": "~3.0.0",
 
 		"symfony/console": "^3.3",
