Fix PSR-4 autoloading of migrations
PHPStan failed on the Doctrine migration files which were not included
correctly in the composer autoload information.

Ran `composer update` to create new version hash for `composer.lock`

--- a/composer.json
+++ b/composer.json
@@ -138,7 +138,10 @@
 		"psr-4": {
 			"WMDE\\Fundraising\\Frontend\\": "src/",
 			"WMDE\\Fundraising\\Frontend\\App\\": "app/",
-			"WMDE\\Fundraising\\Frontend\\Cli\\": "cli/"
+			"WMDE\\Fundraising\\Frontend\\Cli\\": "cli/",
+			"DoctrineMigrations\\": [
+				"src/BucketTesting/migrations/"
+			]
 		}
 	},
 	"autoload-dev": {
