--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -101,3 +101,16 @@ campaigns:
       url_key: incentive
       active: true
       param_only: true
+
+    confirmation_page_layout:
+      description: Testing a new layout for the confirmation page
+      reference: "https://phabricator.wikimedia.org/T268649"
+      start: "2021-02-10"
+      end: "2021-12-31"
+      buckets:
+          - "old_layout"
+          - "new_layout"
+      default_bucket: "new_layout"
+      url_key: confirmation
+      active: true
+      param_only: false
